# lab_os_4

./: CMakeLists.txt
include/: common.h  ringbuff.h
receiver/: CMakeLists.txt  common.h  receiver.cpp  ringbuff.h  sender.cpp
src/receiver/: CMakeLists.txt  receiver.cpp
src/sender/: CMakeLists.txt  sender.cpp
tests/: CMakeLists.txt  tests.cpp
